[workspace]
# members = ["gssp_utils"]
workspace = { members = ["gssp_utils"] }
[package]
name = "gssp_rust_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
regex = { workspace = true, features = ["unicode"] }
tempdir = "0.3.7"
rand = "0.8.4"
cc = "1.0.67"

[dependencies]
gssp_utils = { path = "gssp_utils" }
regex = "1.5.5"

# Build-dependencies are used only when compiling a package for building.
[build-dependencies]
cc = "1.0.67"

# Dev-depencies are used for compiling tests, examples, and benchmarks.
# They are not used when compiling for building, and not propogated to other packages
[dev-dependencies]
regex = { workspace = true}
rand = { workspace = true }
